<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appBarLayout_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    app:elevation="@dimen/no_space">

    <com.google.android.material.appbar.CollapsingToolbarLayout
      android:id="@+id/collapsingToolbarLayout_detail"
      android:layout_width="match_parent"
      android:layout_height="266dp"
      app:contentScrim="@android:color/transparent"
      app:layout_scrollFlags="scroll|exitUntilCollapsed">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
          android:id="@+id/imageView_backCoverDetail"
          android:layout_width="match_parent"
          android:layout_height="160dp"
          android:alpha="0.6"
          android:contentDescription="@string/movie_cover"
          android:scaleType="centerCrop"
          android:src="@color/primary"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
          android:id="@+id/cardView_coverDetail"
          android:layout_width="120dp"
          android:layout_height="180dp"
          android:layout_gravity="bottom"
          android:layout_margin="@dimen/default_space"
          app:cardCornerRadius="@dimen/default_space"
          app:cardElevation="@dimen/no_space"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent">

          <ImageView
            android:id="@+id/imageView_coverDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/movie_cover"
            android:scaleType="centerCrop"
            android:src="@color/primary" />

        </androidx.cardview.widget.CardView>

        <TextView
          android:id="@+id/textView_titleDetail"
          style="@style/TextAppearance.MaterialComponents.Headline5"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/default_space"
          android:layout_marginEnd="@dimen/default_space"
          android:ellipsize="end"
          android:maxLines="3"
          android:textColor="@color/white"
          android:textStyle="bold"
          app:layout_constraintBottom_toTopOf="@id/view_guideLineDetail"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@id/cardView_coverDetail"
          tools:text="Judulnya Disini: Coba Dua Baris Ah" />

        <View
          android:id="@+id/view_guideLineDetail"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@android:color/transparent"
          app:layout_constraintTop_toBottomOf="@id/imageView_backCoverDetail" />

        <TextView
          android:id="@+id/textView_taglineDetail"
          style="@style/TextAppearance.MaterialComponents.Caption"
          android:layout_width="@dimen/no_space"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/default_space"
          android:ellipsize="end"
          android:maxLines="2"
          android:textStyle="italic"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="@id/textView_titleDetail"
          app:layout_constraintTop_toBottomOf="@id/view_guideLineDetail"
          tools:text="Tagline bro" />

        <ImageView
          android:id="@+id/imageView_ratingIconDetail"
          android:layout_width="20dp"
          android:layout_height="20dp"
          android:layout_marginTop="@dimen/small_space"
          android:background="@drawable/shape_circle_white"
          android:backgroundTint="@color/colorSunFlower"
          android:contentDescription="@string/movie_rating"
          android:padding="@dimen/tiny_space"
          android:src="@drawable/ic_baseline_star_24"
          app:layout_constraintStart_toStartOf="@id/textView_taglineDetail"
          app:layout_constraintTop_toBottomOf="@id/textView_taglineDetail"
          app:tint="@color/design_default_color_on_primary" />

        <TextView
          android:id="@+id/textView_ratingDetail"
          style="@style/TextAppearance.MaterialComponents.Subtitle2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/small_space"
          app:layout_constraintBottom_toBottomOf="@id/imageView_ratingIconDetail"
          app:layout_constraintStart_toEndOf="@id/imageView_ratingIconDetail"
          app:layout_constraintTop_toTopOf="@id/imageView_ratingIconDetail"
          tools:text="6.4" />

      </androidx.constraintlayout.widget.ConstraintLayout>

      <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/Theme.MovieCataloq.Toolbar"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_collapseMode="pin"
        app:layout_scrollFlags="scroll"
        app:titleMarginEnd="@dimen/no_space">

      </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.CollapsingToolbarLayout>

  </com.google.android.material.appbar.AppBarLayout>

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <androidx.cardview.widget.CardView
        android:id="@+id/cardView_dateDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_space"
        android:layout_marginTop="@dimen/medium_space"
        app:cardBackgroundColor="@color/colorSunFlower"
        app:cardCornerRadius="@dimen/default_space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
          android:id="@+id/textView_dateDetail"
          style="@style/TextAppearance.MaterialComponents.Caption"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/medium_space"
          android:layout_marginTop="@dimen/small_space"
          android:layout_marginEnd="@dimen/medium_space"
          android:layout_marginBottom="@dimen/small_space"
          android:textColor="@color/white"
          tools:text="12 Mei 2000" />

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
        android:id="@+id/cardView_statusDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_space"
        app:cardBackgroundColor="@color/primary"
        app:cardCornerRadius="@dimen/default_space"
        app:layout_constraintBottom_toBottomOf="@id/cardView_dateDetail"
        app:layout_constraintStart_toEndOf="@id/cardView_dateDetail"
        app:layout_constraintTop_toTopOf="@id/cardView_dateDetail">

        <TextView
          android:id="@+id/textView_statusDetail"
          style="@style/TextAppearance.MaterialComponents.Caption"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/medium_space"
          android:layout_marginTop="@dimen/small_space"
          android:layout_marginEnd="@dimen/medium_space"
          android:layout_marginBottom="@dimen/small_space"
          android:textColor="@color/white"
          tools:text="Released" />

      </androidx.cardview.widget.CardView>

      <TextView
        android:id="@+id/textView_overviewDetail"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_space"
        android:layout_marginEnd="@dimen/default_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/cardView_dateDetail"
        app:layout_constraintTop_toBottomOf="@id/cardView_dateDetail"
        tools:text="@tools:sample/lorem/random" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.core.widget.NestedScrollView>

  <ProgressBar
    android:id="@+id/progressBar_detail"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center" />

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/floatingActionButton_favorite"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:layout_margin="@dimen/default_space"
    android:contentDescription="@string/action_favorite"
    android:src="@drawable/ic_baseline_favorite_border_24"
    app:tint="@color/design_default_color_on_primary" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>